[tool.poetry]
authors = ["Ryan Boris <ryan.boris@gmail.com>"]
description = "small projects repo"
name = "tiny_python_projects"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
ipython = "^7.28.0"
isort = "^5.9.3"
mypy = "^0.910"
pylint = "^2.11.1"
pytest = "^6.2.5"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
profile = 'black'


[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"
